# Deeplearning

./: CMakeLists.txt  Convolutional.hpp  DropoutFullyConnected.hpp  FullyConnected.hpp  KDropoutFullyConnected.hpp  LICENSE  Layer.hpp  Neuralnet.hpp  Pooling.hpp  README.md  SparseFullyConnected.hpp  autoenc_test.cpp  matrix.hpp  output_image.cpp
example/: approx_cosine.cpp  makefile  makefile.example  mnist_sample.cpp  mnist_sample_dist.cpp  mnist_sample_gpu.cpp
include/: ADAM.hpp  BatchNormalize.hpp  Convolutional.hpp  DQN.hpp  Dropout.hpp  DropoutFullyConnected.hpp  FullyConnected.hpp  Function.hpp  KDropout.hpp  KDropoutFullyConnected.hpp  Layer.hpp  Matrix.hpp  Neuralnet.hpp  Optimizer.hpp  Pooling.hpp  SGD.hpp  SparseFullyConnected.hpp  clDeviceManager.hpp  clMatrix.hpp  cltMatrix.hpp  matrix.hpp  mpi_helper.hpp  tMatrix.hpp
include/CL/: adam.cl  add_L2_regular.cl  add_scalar_matrix.cl  add_vector_matrix.cl  assign_data.cl  averagepool_apply.cl  averagepool_delta.cl  bn_apply.cl  bn_apply_mean_var.cl  bn_delta.cl  bn_grad.cl  bn_grad_final_reduce.cl  bn_grad_helper.cl  clMatrix_add.cl  clMatrix_copy.cl  clMatrix_eye.cl  clMatrix_hadamard.cl  clMatrix_hadamard_inplace.cl  clMatrix_norm_fro.cl  clMatrix_ones.cl  clMatrix_sub.cl  clMatrix_sub_in.cl  clMatrix_zeros.cl  conv_apply_add_bias.cl  conv_apply_img_set.cl  conv_apply_ret_set.cl  conv_delta_img_set.cl  conv_delta_kernel_set.cl  conv_grad_bias.cl  conv_grad_bias_final_reduce.cl  conv_grad_delta_set.cl  conv_grad_img_set.cl  full_apply_init.cl  full_delta_init.cl  function_Abs.cl  function_Abs_diff.cl  function_CrossEntropy.cl  function_CrossEntropy_diff.cl  function_Exp.cl  function_Exp_diff.cl  (+27 more)
include/Layer/: AveragePooling.hpp  BatchNormalize.hpp  Convolutional.hpp  Dropout.hpp  FullyConnected.hpp  Layer.hpp  MaxPooling.hpp  SparseFullyConnected.hpp  TransposedConvolutional.hpp
include/Optimizer/: ADAM.hpp  RMSProp.hpp  SGD.hpp
src/example/: CMakeLists.txt
src/example/approx_cosine/: CMakeLists.txt  approx_cosine.cpp
src/example/mnist_sample/: CMakeLists.txt  mnist_sample.cpp
src/example/mnist_sample_dist/: CMakeLists.txt  mnist_sample_dist.cpp
src/example/mnist_sample_gpu/: CMakeLists.txt  mnist_sample_gpu.cpp
src/include/: Function.hpp  Matrix.hpp  Neuralnet.hpp  clDeviceManager.hpp  clMatrix.hpp  cltMatrix.hpp  cudaMatrix.hpp  cudatMatrix.hpp  tMatrix.hpp
src/include/CL/: adam.cl  add_scalar_matrix.cl  add_vector_matrix.cl  assign_data.cl  averagepool_apply.cl  averagepool_delta.cl  bn_apply_inf.cl  bn_apply_mean_var.cl  bn_delta.cl  bn_grad.cl  bn_grad_final_reduce.cl  bn_grad_helper.cl  clMatrix_clip.cl  clMatrix_hadamard.cl  clMatrix_norm_fro.cl  clMatrix_ones.cl  clMatrix_sub.cl  conv_apply_add_bias.cl  conv_apply_img_set.cl  conv_apply_ret_set.cl  conv_grad_bias.cl  conv_grad_bias_helper.cl  full_apply_bias.cl  full_delta_init.cl  full_grad_bias.cl  function_Abs_diff.cl  function_Exp.cl  function_LeakyReLU_diff.cl  function_Log.cl  function_Polynomial_diff.cl  function_Pow.cl  function_ReLU.cl  function_ReLU_diff.cl  function_Sigmoid.cl  function_Sigmoid_diff.cl  function_Softmax_helper.cl  function_Softplus.cl  function_Softsign_diff.cl  function_Square_diff.cl  function_Tanh_diff.cl  (+4 more)
src/include/CUDA/: adam_kernel.cu  assign_data_kernel.cu  clip_kernel.cu  cuda_kernel.h  eye_kernel.cu  full_apply_bias_kernel.cu  full_grad_bias_kernel.cu  func_crossentropy_kernel.cu  func_relu.cu  func_softmax_kernel.cu  hadamard_inplace_kernel.cu  hadamard_kernel.cu  ones_kernel.cu  sub_kernel.cu  zeros_kernel.cu
src/include/Layer/: AveragePooling.hpp  BatchNormalize.hpp  Convolutional.hpp  Dropout.hpp  FullyConnected.hpp  Layer.hpp  TransposedConvolutional.hpp
src/include/Optimizer/: ADAM.hpp  Optimizer.hpp
src/test/: CMakeLists.txt
src/test/Function/CPU/: CMakeLists.txt  crossentropyTest_CPU_float.cpp  reluTest_CPU_float.cpp  softmaxTest_CPU_float.cpp
src/test/Function/CUDA/: CMakeLists.txt  crossentropyTest_CUDA_float.cpp  reluTest_CUDA_float.cpp  softmaxTest_CUDA_float.cpp
src/test/Function/OpenCL/: CMakeLists.txt  crossentropyTest_OpenCL_float.cpp  reluTest_OpenCL_float.cpp  softmaxTest_OpenCL_float.cpp
src/test/Layer/CPU/: BatchNormalize_CPU_double.cpp  CMakeLists.txt  FullyConnectedTest_CPU_double.cpp  FullyConnectedTest_CPU_float.cpp
src/test/Layer/CUDA/: BatchNormalize_CUDA_float.cpp  CMakeLists.txt  FullyConnectedTest_CUDA_float.cpp
src/test/Layer/GPU/: BatchNormalize_GPU_float.cpp  CMakeLists.txt  FullyConnectedTest_GPU_float.cpp
src/test/Layer/OpenCL/: CMakeLists.txt
src/test/Matrix/: CMakeLists.txt  cudaMatrixTest.cpp
src/test/Optimizer/CPU/: CMakeLists.txt  adamTest_CPU_float.cpp
src/test/Optimizer/CUDA/: CMakeLists.txt  adamTest_CUDA_float.cpp
src/test/Optimizer/OpenCL/: CMakeLists.txt  adamTest_OpenCL_float.cpp
