cmake_minimum_required(VERSION 2.8)

find_package(OpenCL)
include(/usr/local/lib64/cmake/clBLAS/clBLASConfig.cmake)

if( OpenCL_FOUND AND CLBLAS_LIBRARIES )
  add_executable(FullyConnectedTest_GPU_float FullyConnectedTest_GPU_float.cpp)
  add_definitions(-DUSE_GPU)
  include_directories(${OpenCL_INCLUDE_DIRS})
  target_link_libraries(FullyConnectedTest_GPU_float ${BLAS_LIBRARIES})
  target_link_libraries(FullyConnectedTest_GPU_float ${GTEST_LIBRARIES})
  target_link_libraries(FullyConnectedTest_GPU_float ${OpenCL_LIBRARIES})
  target_link_libraries(FullyConnectedTest_GPU_float ${CLBLAS_LIBRARIES})

  add_executable(BatchNormalize_GPU_float BatchNormalize_GPU_float.cpp)
  add_definitions(-DUSE_GPU)
  include_directories(${OpenCL_INCLUDE_DIRS})
  target_link_libraries(BatchNormalize_GPU_float ${BLAS_LIBRARIES})
  target_link_libraries(BatchNormalize_GPU_float ${GTEST_LIBRARIES})
  target_link_libraries(BatchNormalize_GPU_float ${OpenCL_LIBRARIES})
  target_link_libraries(BatchNormalize_GPU_float ${CLBLAS_LIBRARIES})
else()
  message(STATUS "No OpenCL is found. Can't build GPU tests.")
endif()
